force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/AH_PLCM_MigrationUser_Mapping__c.object-meta.xml
<CustomObject>
    <description>Object will be populated by Apex code when customer use the Community Portal. Object data will be used in User Cross reference mapping by portal</description>
    <label>PLCM MigrationUser Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PLCM MigrationUser Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLCM MigrationUser Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>