force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/IsRetired_User__c.field-meta.xml
<CustomField>
    <fullName>IsRetired_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a retired user?</description>
    <inlineHelpText>Is this a retired user?</inlineHelpText>
    <label>Retired User</label>
    <type>Checkbox</type>
</CustomField>