force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/MappedTo_PLCM_TargetOrg_User__c.field-meta.xml
<CustomField>
    <fullName>MappedTo_PLCM_TargetOrg_User__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>User Mapping information - User Id (Lookup - PLCM TargetOrg User)</inlineHelpText>
    <label>MappedTo PLCM TargetOrg User</label>
    <referenceTo>AH_PLCM_TargetOrg_User__c</referenceTo>
    <relationshipLabel>PLCM MigrationUser Mapping</relationshipLabel>
    <relationshipName>PLCM_MigrationUser_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>