force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/MappedTo_User_Property__c.field-meta.xml
<CustomField>
    <fullName>MappedTo_User_Property__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Mapping information - User Property (Lookup - MigrationUserMapping)</inlineHelpText>
    <label>MappedTo User Property</label>
    <length>180</length>
    <type>Text</type>
</CustomField>