force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/New_User__c.field-meta.xml
<CustomField>
    <fullName>New_User__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103</description>
    <inlineHelpText>Is considered as New User for migration?</inlineHelpText>
    <label>New User</label>
    <type>Checkbox</type>
</CustomField>