force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/PLCM_Migration_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>PLCM_Migration_Project_Name__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>NI Documentation record to which this PLCM MigrationUser Mapping record is associated.</inlineHelpText>
    <label>PLCM Migration Project Name</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>PLCM MigrationUser Mapping</relationshipLabel>
    <relationshipName>PLCM_MigrationUser_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>