force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/PLCM_Migration_Property_Assignment__c.field-meta.xml
<CustomField>
    <fullName>PLCM_Migration_Property_Assignment__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>Lookup to Migration property for User - Property relationship</inlineHelpText>
    <label>PLCM Migration Property Assignment</label>
    <referenceTo>AH_PLCM_Migration_Property__c</referenceTo>
    <relationshipLabel>PLCM MigrationUser Mapping</relationshipLabel>
    <relationshipName>PLCM_MigrationUser_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>