force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/TotalTasks__c.field-meta.xml
<CustomField>
    <fullName>TotalTasks__c</fullName>
    <label>TotalTasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>