force-app/main/default/objects/AH_PLCM_MigrationUser_Mapping__c/fields/User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Address__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address of PLCM MigrationUser Mapping user.</inlineHelpText>
    <label>User Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>